<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialogo_aviso_uno"
                android:id="@+id/textView"
                android:textColor="@color/greentoolbar"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/derecha"
                android:textColor="@color/black"
                android:text="@string/dialogo_msm_uno"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialogo_aviso_dos"
                android:id="@+id/textView2"
                android:textColor="@color/greentoolbar"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/derecha"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/frente"
                android:textColor="@color/black"
                android:text="@string/dialogo_msm_dos"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialogo_aviso_tres"
                android:id="@+id/textView3"
                android:textColor="@color/greentoolbar"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/frente"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/izquierda"
                android:textColor="@color/black"
                android:text="@string/dialogo_msm_tres"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView3"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialogo_aviso_cuatro"
                android:id="@+id/textView4"
                android:textColor="@color/greentoolbar"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/izquierda"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/atras"
                android:textColor="@color/black"
                android:text="@string/dialogo_msm_cuatro"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView4"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/dialogo_aviso_cinco"
                android:id="@+id/textView5"
                android:textColor="@color/greentoolbar"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/atras"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/otro"
                android:textColor="@color/black"
                android:text="@string/dialogo_msm_cinco"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textView5"
                />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>