<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sample1PoiDetailActivity" >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar"></include>


    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="10dip">
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/poi_name" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/greentoolbar"/>
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/poi_title" android:textColor="@color/black" />
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="10dip">
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/poi_description" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/greentoolbar"/>
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/poi_description" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="10dip">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/poi_informacion" android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/greentoolbar"/>
        <TextView android:layout_width="fill_parent" android:layout_height="250dp" android:layout_weight="1" android:id="@+id/poi_information" android:scrollbars = "vertical" android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="30dip">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/informacionAR3D"  android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>