<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_uno"
                android:id="@+id/textView"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:src="@drawable/buscador_lista_dos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_dos"
                android:id="@+id/textView3"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="500dp"
                android:src="@drawable/buscador_lista_tres"
                android:layout_below="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_tres"
                android:id="@+id/textView4"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="980dp"
                android:src="@drawable/buscador_lista_cuatro"
                android:layout_below="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_cuatro"
                android:id="@+id/textView5"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_below="@+id/imageView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1390dp"
                android:src="@drawable/buscador_lista_cinco"
                android:layout_below="@+id/textView5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_cinco"
                android:id="@+id/textView6"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_below="@+id/imageView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1850dp"
                android:src="@drawable/buscador_lista_seis"
                android:layout_below="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_lista_seis"
                android:id="@+id/textView7"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2300dp"
                android:src="@drawable/buscador_lista_siete"
                android:layout_below="@+id/textView7"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView7"
                android:layout_marginTop="10dp"
                />

        </RelativeLayout>


    </ScrollView>

</LinearLayout>