<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_escrito_uno"
                android:id="@+id/textView"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                android:src="@drawable/buscador_escrito_uno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_escrito_dos"
                android:id="@+id/textView2"
                android:textColor="@color/black"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="680dp"
                android:src="@drawable/buscador_escrito_dos"
                android:layout_below="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_escrito_tres"
                android:id="@+id/textView3"
                android:textColor="@color/black"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1120dp"
                android:src="@drawable/buscador_escrito_dos"
                android:layout_below="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_escrito_cuatro"
                android:id="@+id/textView4"
                android:textColor="@color/black"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1600dp"
                android:src="@drawable/buscador_escrito_dos"
                android:layout_below="@+id/textView4"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialogo_busqueda_escrito_cinco"
                android:id="@+id/textView5"
                android:textColor="@color/black"
                android:layout_below="@+id/imageView4"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/imageView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2040dp"
                android:src="@drawable/buscador_escrito_dos"
                android:layout_below="@+id/textView5"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/imageView5"
                />

        </RelativeLayout>


    </ScrollView>

</LinearLayout>